--- a/WebContent/forms/viewDocument.html
+++ b/WebContent/forms/viewDocument.html
@@ -18,7 +18,7 @@
 				</div>
 				<div class="form-group row">
 					<div class="col-sm-10">
-						<button onClick="_searchDocument.search()" type="button" class="btn btn-success btn-sm">
+						<button onClick="_searchDocument.search()" type="button" class="btn btn-primary btn-sm">
 							<img src='images/93.png' /> <span data-i18n="form.button.validate" />
 						</button>
 					</div>
